# library

Embedded-Systems-Design/BMP280-Sensor/: BMP280_Sensor_Code.md  CMakeLists.txt  bmp280_i2c.c  bmp280_i2c.h  instructions.md  main.c  milkv_duo.cmake
Embedded-Systems-Design/SSD1306-Usermode-Library/: instructions.md
Embedded-Systems-Design/Static-Libraries/: CMakeLists.txt  Makefile  arithmetic.c  arithmetic.cpp  arithmetic.dockerfile
Embedded-Systems-Design/Static-Libraries/doubleops/: ddivide.cpp  dmultiply.cpp  double_arithmetic.h
Embedded-Systems-Design/Static-Libraries/intops/: add.c  divide.c  int_arithmetic.h  multiply.c
Embedded-Systems-Design/cross-compiling-assignment/cross-compiling-partone/: CMakeLists.txt  Makefile  SDK.dockerfile  envsetup.sh
Embedded-Systems-Design/cross-compiling-assignment/cross-compiling-parttwo/: CMakeLists.txt  CleanUp.sh  ReCompile.sh  arithmetic.c  arithmetic.dockerfile  build.sh  entrypoint.sh  envsetup.sh  milkv_duo.cmake
Embedded-Systems-Design/mqtt/cJSON-1.7.17/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  Makefile  milkv_duo.cmake
Embedded-Systems-Design/mqtt/mosquitto-2.0.18/: CMakeLists.txt  CONTRIBUTING.md  ChangeLog.txt  LICENSE.txt  Makefile  NOTICE.md  README-compiling.md  README-letsencrypt.md  README-windows.txt  README.md  about.html  aclfile.example  config.h  config.mk  edl-v10  libmosquitto.pc.in  libmosquittopp.pc.in  milkv_duo.cmake  mosquitto.conf  pskfile.example  pwfile.example
Embedded-Systems-Design/mqtt/openssl-1.1.1w/: CHANGES  INSTALL  (+16 more)
cross-compiling-partone/: CMakeLists.txt  Makefile  example
cross-compiling-parttwo/: arithmetic  entrypoint.sh  envsetup.sh
cross-compiling-parttwo/doubleops/: double_arithmetic.h
(+3447 files in other folders)
